# learn-web-axum-askama

./: Cargo.toml  justfile
src/: init.rs  lib.rs  main.rs  routes.rs
src/handlers/: auth.rs  helpers.rs  mod.rs  public.rs  todos.rs
src/models/: mod.rs  templates.rs  user_form_model.rs
static/css/: auth.css
templates/: index.html
templates/pages/: create.html  home.html  login.html  not-found.html  server-error.html  sign-up.html  todos.html
templates/partial/: navigation.html
