[package]
name = "web-axum-askama"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version =  "1.47.1", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
askama ={version = "0.12.1"}
tower-http = {version = "0.5.2", features = ["fs","trace"]}
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tracing = "0.1.40"
serde = {version = "1.0.228", features = ["derive"]}
validator = { version = "0.20.0", features = ["derive"]}